<resources>
    <string name="app_name">Snakify</string>
    <string name="login_btn">LOGIN</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="snakify">SNAKIFY</string>
    <string name="logo_description">App Logo</string>
    <string name="usericon">usericon</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="grassright">grassRight</string>
    <string name="grassleft">grassleft</string>
    <string name="grass">TODO</string>
    <string name="login">LOGIN</string>
    <string name="pass">Password</string>
    <string name="user">TODO</string>
    <string name="useri">Username</string>
    <string name="camera">camera</string>
    <string name="identify">Identify</string>
    <string name="Identify">Identify</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_account">User Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="users_name">Users Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="background">User Account</string>
    <string name="snake_details">Snake Details</string>
    <string name="search">Search</string>
    <string name="search_for_a_snake">Search for a snake</string>

</resources>